3784: * Updates to new android studio and gradle.